# vue3-games

./: .gitignore  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.js  vite.config.js
src/: App.vue  CompositionApiTest.vue  JSXTest.jsx  MineSweeper.vue  TeleportTest.vue  index.css  main.js  template.html
src/GUIConfigured/: MineSweeper.vue
src/components/common/: Calculator.vue  FileTree.vue
src/components/common/MineClearance/: Area.vue  MineClearance.vue  index.vue
src/components/common/MineClearance/scripts/: addRandomBoom.js  createMotrix.js  isInvalid.js  randomGameData.js  randomIntegerNumbers.js
src/components/common/Snake/scripts/: index.js
src/components/common/Tetris/: ContentRender.vue
src/components/common/Tetris/mode/: normalMode.js
src/components/common/Tetris/scripts/: createContext.js  createNewItem.js  itemEnums.js  rotateMotrix.js  utils.js
src/components/content/: ScrollNum.vue
src/router/: index.js
src/testData/: fileTree.js
src/views/: Index.vue  MineSweeper.vue  Snake.vue  Tetris.vue
wasm/: index.html
wasm/snake/: index.d.ts  index.js  index_bg.wasm  index_bg.wasm.d.ts  package.json
wasm/src/: bootstrap.js  index.js  index_pre.js  wasm_.js
wasm/src/utils/: random.js
wasm_raw_code/snake/: Cargo.toml
wasm_raw_code/snake/src/: lib.rs
